feature/PN-7727 (#550)
* PN-7727: modificato mapping per tornare i pagamenti ad IO

* PN-7727: modificato mapping per tornare i pagamenti ad IO